--- a/blue-saucier/src/App.css
+++ b/blue-saucier/src/App.css
@@ -136,6 +136,13 @@ h2{
   border-radius: 3%;
 }
 
+.menuBackground2{
+  background: url(./images/menuBackground.jpg) no-repeat center center fixed;
+  height: auto;
+  padding-left: 11%;
+  border-radius: 3%;
+}
+
 
 .createMenu{
   background: linear-gradient( rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.5) ), url(./images/CreateMenu.jpg) no-repeat center center fixed;
@@ -146,3 +153,57 @@ h2{
   min-height: 100%;
 }
 
+.viewMenu{
+  background: linear-gradient( rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.5) ), url(./images/viewMenu.jpg)  no-repeat center center fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.createMenuTitle {
+    font-size: 3.3rem;
+    margin-right: 22%;
+    padding-top: 3%;
+}
+
+.category {
+  font-size: 2rem;
+  margin-left: 30%;
+  margin-top: 8%;
+}
+
+.categoryTwo {
+  font-size: 2rem;
+  margin-left: 30%;
+  margin-top: 20%;
+}
+
+.dish-and-price {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 1.5rem;
+    margin-right: 24%;
+}
+
+.dish {
+  margin-left: 18%;
+}
+
+.description {
+    font-size: 1.2rem;
+    margin-bottom: 14%;
+    margin-left: 20%;
+}
+
+.descriptionTwo {
+  font-size: 1.2rem;
+  margin-bottom: 14%;
+  margin-left: 21%;
+}
+
+.extraDishes {
+    margin-bottom: 16%;
+    margin-right: 17%;
+}
