editing a menu is now possible. styles for menuedit component have been added

--- a/blue-saucier/src/App.css
+++ b/blue-saucier/src/App.css
@@ -123,7 +123,7 @@ h2{
 }
 
 .menuPlanning {
-  background: linear-gradient( rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.5) ), url(./images/Menu.jpg) no-repeat center center fixed;
+  background: linear-gradient( rgba(0, 0, 0, 2), rgba(0, 0, 0, 0) ), url(./images/menu.jpg) no-repeat center center fixed;
   height: 899px;
   background-size: cover;
 }
@@ -206,4 +206,13 @@ h2{
 .extraDishes {
     margin-bottom: 16%;
     margin-right: 17%;
+}
+
+.editMenu{
+  background: linear-gradient( rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.1) ), url(./images/editMenu.jpg)  no-repeat center center fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
