--- a/blue-saucier/src/App.css
+++ b/blue-saucier/src/App.css
@@ -220,3 +220,18 @@ h2{
 .googleButton {
   color: #4183c4;
 }
+
+.editPara {
+    font-size: 2rem;
+    width: 100%;
+    margin-left: 16%;
+}
+
+.manageButtons {
+    text-align: center;
+    margin-bottom: 6%;
+}
+
+.manageProfileContent {
+  padding-top: 17%;
+}
