--- a/blue-saucier/src/App.css
+++ b/blue-saucier/src/App.css
@@ -90,8 +90,6 @@ button {
 }
 
 
-
-
                       /*Contact, About, Footer, */ 
 
 .contactLink {
@@ -128,8 +126,6 @@ button {
 .aboutItemCard {
   margin-top: 1.2%;
 }
-
-
 
 
                                 /*Home*/
@@ -178,7 +174,7 @@ button {
   text-align: center;
 } 
 
-.menuHeaderBttn {
+.menuHeaderBttn, .createListBttn {
   cursor: pointer;
     display: inline-block;
     min-height: 1em;
@@ -199,7 +195,6 @@ button {
     text-decoration: none;
     border-radius: .28571429rem;
     position: absolute;
-    right: 2%;
 }
 
 .mainMenu {
@@ -227,9 +222,34 @@ button {
   background-size: cover;
 }
 
+.createListItem {
+  margin-right: 5%;
+}
+
+.createListUnitPrice {
+  width: 8%;
+  margin-right: 6%;
+}
+
+.createListTotal {
+  width: 9%;
+}
+
+.createListCat {
+  width: 11%;
+  margin-left: -0.5%;
+}
+
+.createListBttn {
+    margin-top: 4%;
+    margin-left: 5%;
+    width: 13%;
+}
+
 .view-list {
-  background: linear-gradient( rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.5) ), url(./images/viewList2.jpg);
+  background: linear-gradient( rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.5) ), url(./images/viewList.jpg);
   position: absolute;
+  background-size: cover;
   top: 0;
   left: 0;
   min-width: 100%;
@@ -383,8 +403,6 @@ button {
   min-height: 100%;
 }
 
-
-
 .editPara {
     font-size: 2rem;
     width: 100%;
@@ -399,8 +417,6 @@ button {
 .manageProfileContent {
   padding-top: 17%;
 }
-
-
 
 .manageProfile{
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1) ), url(./images/manageProfile.jpg)  no-repeat center center fixed;
@@ -616,7 +632,7 @@ background-color: #848484;
   }
 }
 
-                      /* Management Menu Media Queries (mobile)*/
+             /* Management Menu Media Queries (mobile)*/
 
 @media(max-width: 500px){
 .listMenu {
@@ -663,3 +679,68 @@ background-color: #848484;
   }
 }
 
+
+            /* Lists Media Queries*/
+
+@media(max-width: 500px) {
+  .createList {
+    height: 100vh;    
+  }
+}
+
+@media(max-width: 500px){
+  .createListForm {
+    padding: 14%;
+    padding-left: 28%;
+    width: 100%;
+  }
+}
+
+@media(max-width: 500px){
+  .createListUnitPrice {
+    width: 44%;
+  }
+}
+
+@media(max-width: 500px){
+  .createListTotal {
+    margin-right: 5%;
+    margin-bottom: 4%;
+    width: 42%;
+  }
+}
+
+@media(max-width: 500px) {
+  .createListUnitPrice {
+    width: 44%;
+    margin-right: 6%;
+  }
+}
+
+@media(max-width: 500px){
+  .createListCat {
+    margin-left: -3%;
+    width: 47%;
+  }
+}
+
+@media(max-width: 500px){
+  .createListQuant {
+    width: 35%;
+    margin-left: 0%;
+    padding-bottom: 4%;
+  }
+}
+
+@media(max-width: 500px){
+  .createListBttn {
+    margin-top: 16%;
+    width: 66%;
+    padding-top: 4%;
+    margin-right: 17%;
+    margin-left: -7%;
+
+  }
+}
+ 
+ 
