--- a/blue-saucier/src/App.css
+++ b/blue-saucier/src/App.css
@@ -514,36 +514,35 @@ button {
   padding-bottom: 12%;
 }
 
+/*  Profile*/
 
+.profileContainer {
 
+  height: auto;
+}
 
-
-
-
-
-
-.editPara {
+.viewProfileInfo {
     font-size: 2rem;
     width: 100%;
     margin-left: 16%;
 }
 
-.manageButtons {
+.viewProfileBttn {
     text-align: center;
     margin-bottom: 6%;
 }
 
-.manageProfileContent {
+.viewProfileContent {
   padding-top: 17%;
 }
 
-.manageProfile{
+.viewProfile{
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1) ), url(./images/manageProfile.jpg)  no-repeat center center fixed;
   height: 899px;
   background-size: cover;
 }
 
-.manageProfileImg {
+.viewProfileImg {
 background-color: #848484;
 }
 
@@ -749,7 +748,7 @@ background-color: #848484;
             /* Lists Media Queries*/
 
 @media(max-width: 500px) {
-  .createList {
+  .createList, .viewProfile {
     height: 100vh;    
   }
 }
@@ -878,7 +877,29 @@ background-color: #848484;
   }
 }
 
+        /*Profile Media Queries*/
 
+@media(max-width: 500px){
+  .viewProfileContent {
+    padding-top: 45%;
+  }
+}
+
+@media(max-width: 500px){
+  .viewProfileInfo {
+    font-size: 1.5rem;
+    margin-left: 0;
+    padding-left: 15%;
+  }
+}
+
+@media(max-width: 500px){
+  
+}
+
+@media(max-width: 500px){
+  
+}
 
 
 
